--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/router-plugin": "^1.132.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
